--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <p> A problem has occured please click this link to proceed. </p>
 
-<a  href="https://youtu.be/dQw4w9WgXcQ?t=3">
+<a  href="https://www.bing.com/videos/search?q=rick+roll+no+ads&docid=608008030765977507&mid=717C085AC21BA976797D717C085AC21BA976797D&view=detail&FORM=VIRE">
 Click This</a>
 
 </body>
