--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>file:///D:/Lol%20Html/index.html</title>
+<title>Cool Game</title>
  <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css"/>
