--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <p> A problem has occured please click this link to proceed. </p>
 
-<a  href="https://www.bing.com/videos/search?q=rick+roll+no+ads&docid=608008030765977507&mid=717C085AC21BA976797D717C085AC21BA976797D&view=detail&FORM=VIRE">
+<a  href="https://tinyurl.com/y483amdu">
 Click This</a>
 
 </body>
 
 
 
-<!--Link is https://samuelhood476.github.io/legendary-couscous/-->
+<!--Link is https://tinyurl.com/y483amdu-->
 
 
 
