--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p> A problem has occured please click this link to proceed. </p>
 
 <a  href="https://tinyurl.com/y483amdu">
-Click This</a>
+Click This to Proceed</a>
 
 </body>
 
