--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Cool Game</title>
+<title>A Quick Website</title>
  <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css"/>
@@ -11,15 +11,15 @@
 
 <body> 
 
-<h1> Error </h1>
+<h1> Hi (: </h1>
 
 <br>
 <br>
 <br>
 
-<p> A problem has occured please click this link to proceed. </p>
+<p> This is Sam's website </p>
 
-<a  href="https://tinyurl.com/y483amdu">
+<!--<a  href="https://tinyurl.com/y483amdu">
 Click This to Proceed</a>
 
 </body>
