--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 
 <body> 
 
-<h1> Hi (: </h1>
+<h1> Error</h1>
 
 <br>
 <br>
 <br>
 
-<p> This is Sam's website </p>
-
-<!--<a  href="https://tinyurl.com/y483amdu">
+<p> An error has ecured please click this link to proceed</p>
+<a  href="https://tinyurl.com/y483amdu">
 Click This to Proceed</a>
 
 </body>
