--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <br>
 <br>
 
-<p> An error has ecured please click this link to proceed</p>
-<a  href="https://tinyurl.com/y483amdu">
+<p> An error has accurred</p>
+<a  href="https://youtu.be/dQw4w9WgXcQ">
 Click This to Proceed</a>
 
 </body>
 
 
 
-<!--Link is https://tinyurl.com/y483amdu-->
+<!--https://youtu.be/dQw4w9WgXcQ-->
 
 
 
